syntax = "proto3";

package authz.login;

option go_package = "github.com/xiaohuashifu/him/api/authz/login";

// 登录类型
enum LoginType {
    LoginTypeUnknown = 0; // 未知
    LoginTypeSMVerCode = 1; // 短信验证码登录
    LoginTypePwd = 2; // 密码登录
}

// 短信验证码登录请求内容
message SMVerCodeLoginReqContent {
    string Phone = 1; // 手机号码
    string SMVerCode = 2; // 短信验证码
}

// 发送短信登录验证码请求
message SendSMVerCodeForLoginReq {
    string Phone = 1; // 手机号码
}

// 发送短信登录验证码响应
message SendSMVerCodeForLoginRsp {}

// 密码登录请求内容
message PwdLoginReqContent {
    string Account = 1; // 账号
    string Pwd = 2; // 密码
}

// 登录请求
message LoginReq {
    LoginType Type = 1; // 登录类型
    bytes Content = 2; // 请求内容
}

// 登录响应
message LoginRsp {
    string Token = 1; // 凭证
}

// 设置密码登录请求
message SetPwdLoginReq {
    uint64 UserID = 1; // 用户编号
    string OrigPwd = 2; // 原密码
    string NewPwd = 3; // 新密码
}

// 设置密码登录响应
message SetPwdLoginRsp {}

// 退出登录请求
message LogoutReq {
    string Token = 1; // 凭证
}

// 退出登录响应
message LogoutRsp {}

// todo 发送验证码前的图形验证码
// todo 忘记密码